--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -19,7 +19,16 @@
   "GoogleLogin": "دخول بجوجل",
   "EnteryourEmail": "ادخل البريد الالكتروني",
   "EnteryourPassword": "ادخل  كلمة السر",
-
+  "Username": "اسم المستخدم ",
+  "EnteryourUsername": "ادخل اسم المستخدم ",
+  "Register": "انشاء مستخدم ",
   "ResetPassword": "إعادة تعيين كلمة المرور",
-  "ErrorInvalidLogin": "البريد الإلكتروني أو كلمة المرور غير صحيحة"
+  "ErrorInvalidLogin": "البريد الإلكتروني أو كلمة المرور غير صحيحة",
+  "Create": "انشاء",
+
+  "validation": {
+    "username": "يجب أن يكون بين 3 و 30 حرفًا، ويُسمح فقط بالحروف والأرقام والرموز (_ - @).",
+    "email": "أدخل بريدًا إلكترونيًا صالحًا (مثال: name@example.com).",
+    "password": "يجب أن تكون 8–20 خانة، وتحتوي على حرف كبير واحد على الأقل، ورقم واحد، ورمز خاص واحد على الأقل (# @ $ ! _)."
+  }
 }
